--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ MarkupSafe==0.23
 Werkzeug==0.9.6
 bcrypt==1.0.2
 cffi==0.8.6
+httplib2==0.9
 itsdangerous==0.24
 pycparser==2.10
 pymongo==2.7.2
+six==1.8.0
+twilio==3.6.7
 wsgiref==0.1.2
