--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
 bcrypt==1.0.2
+boto==2.32.1
 cffi==0.8.6
+gunicorn==19.1.1
 httplib2==0.9
 itsdangerous==0.24
 pycparser==2.10
