Add call and handle_call views

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
+SpeechRecognition==1.1.2
 Werkzeug==0.9.6
 bcrypt==1.0.2
 boto==2.32.1
@@ -10,6 +11,7 @@ httplib2==0.9
 itsdangerous==0.24
 pycparser==2.10
 pymongo==2.7.2
+requests==2.4.1
 six==1.8.0
 twilio==3.6.7
 wsgiref==0.1.2
